--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react": "^7.29.2",
     "less": "^4.1.3",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "webpack": "^5.89.0"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
